src/scss/recit/_moodle-override.scss
/*****************************
 * MOODLE OVERRIDE
 *****************************/
 body{
    height: auto;
    
    #page-wrapper{
        padding: 0px;
    }
 }
 

 .block_myoverview .card-deck .myoverviewimg.courseimage{
	background-size: contain;
	background-repeat: no-repeat;	
 }
 section .block_myoverview .card{
	 border: none;
 }

#categoryquestions{
    td,th{
        border: none;
        padding: .4rem;
    }
}

.editor_atto_content{width: 100%!important;}

.generaltable{
    width: 100%;
    max-width: 100%;
    margin-bottom: 1rem;
    background-color: transparent;
}

.generaltable tbody tr:nth-of-type(odd) {
    background-color: rgba(0,0,0,.05);
}

#id_onlinetext_editor_atto_image_widthentry, #id_onlinetext_editor_atto_image_heightentry{
    width: 100px;
}

// Navigation du test
.path-mod-quiz {
    #mod_quiz_navblock {
        .qnbutton{color: #007bff;} // force the color because there is a conflit with btn-secondary
    }

    .formulation{background-color: #f8f9fa;} 

    .que{
        .info{
            float: none; display: flex; width: 100%; justify-content: space-between; align-items: center; background-color: transparent; border: none; margin: 0;
            &>div{margin: 0;}
        } 
        .content{margin: 0;}
    }
}

//input[type=text], input[type=password], textarea{width: 100%;}
.moodle-dialogue-wrap{min-width: 350px;}

@media (min-width: 576px){
    .form-inline .form-control {
        width: inherit;
    }
}

// prevent the #page to move towards left when opening the drawer
body.drawer-open-right{margin-right: inherit;}
@media (min-width:768px){body.drawer-open-right{margin-right: inherit;}}

// Keep the table of contents of the module Book fixed on viewing but in editing mode in natural behavior

@media screen and (min-width: 1024px){
    body:not(.editing){
        .block_book_toc{
            //position: fixed;
            width: 20vw;
            max-width: 315px;
            //z-index: 3;
        }
    }
}

@media screen and (max-width: 1023px){
    .block_book_toc{
        position: relative;
        width: 100%;
        max-width: 100%;
    };
}

#page-wrapper{margin-bottom: 0px}
#page-wrapper::after{content:"";display:block;min-height:0px}
 
.block_navigation .block_tree [aria-expanded=false]:before, .block_settings .block_tree [aria-expanded=false]:before{content: "\23F5"; }
.block_navigation .block_tree [aria-expanded=true]:before, .block_settings .block_tree [aria-expanded=true]:before {content: "\23F7"; }

.messaging-area-container .messaging-area .contacts-area{width: 340px;}
.messaging-area-container .messaging-area .messages-area{width:calc(100% - 340px);}

span.instancename{margin: .5rem;}

// modification de l'aspect du bouton de navigation du quiz (bloc)
#mod_quiz_navblock{
    .btn{
        white-space: normal!important;
    }
}

// ça affecte la taille des icônes dans la top-navbar
nav.navbar ul.navbar-nav .popover-region .popover-region-toggle{line-height: normal;}

#course-banner{
    .page-context-header{
        .header-button-group{
            float:inherit;
            #message-user-button{color: #FFF;}
        }
    }
}

// fix the minimum height of a module //brise les contenus de cours
/* .pagelayout-incourse{
    #region-main{
        .card{overflow-x:auto;overflow-y:visible;min-height:45rem}
    }
} */

// DÉBUT PATCH H5P
#fitem_id_h5peditor {
    .form-control-static {
        width: 100% !important;
    }
}
// FIN PATCH H5P

#top-1.engine{display: none;} // code dynamique intrusif du Mobirise   

@media (max-width: 767.98px){
    .breadcrumb:not(:empty) {
        border: 0;
    }
}

